--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+---
+layout: default
+title: {{ site.name }}
+---
 
-<H1>Hello World.</H1>
-<body>hahahahah hah ha hah </body>
+<div id="home">
+  <h1>Blog Posts</h1>
+  <ul class="posts">
+    {% for post in site.posts %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+</div>
